# AI-neclace

./: .gitignore  Elements-AI-neclace.code-workspace  README.md
.devcontainer/: base.Dockerfile  devcontainer.json  docker-compose.yml  firmware.Dockerfile  frontend.Dockerfile  node-backend.Dockerfile  python-backend.Dockerfile
.github/workflows/: docs.yml  eslint.yml
backend/: README.md
backend/node-service/: README.md
backend/python-service/: README.md
docs/: README.md  mkdocs.yml
firmware/: CMakeLists.txt  README.md  prj.conf
firmware/BLEPeripheral/include/: ble_helper.h  ble_services.h
firmware/BLEPeripheral/src/: ble_services.c
firmware/adcdata/include/: adcvalues.h
firmware/adcdata/src/: adcvalues.c
firmware/src/: main.c
frontend/: README.md
mobile_app/: .eslintrc.js  App.js  app.json  eslint.config.js  package-lock.json  package.json
mobile_app/src/components/: ApiKeyModal.js  BaseModal.js  ClearHistoryModal.js  LanguageModal.js  MaxSpeakersModal.js  ModelModal.js  SampleTranscriptsModal.js  SampleTranscriptsResultModal.js  SplashScreen.js  TabAnimationModal.js  ThemeModal.js
mobile_app/src/config/: constants.js  memoryConstants.js  prompts.js  sampleData.js  sampleMemories.js
mobile_app/src/screens/: DeviceScreen.js  HistoryScreen.js  HomeScreen.js  LiveTranscriptionScreen.js  MemoriesScreen.js  SettingsScreen.js  SummaryScreen.js
mobile_app/src/services/: ai.js  apiValidation.js  memoriesStorage.js  sampleTranscriptsService.js  secureStorage.js  storage.js
mobile_app/src/types/: settings.js
mobile_app/src/utils/: logger.js
(+33 files in other folders)
